--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,14 @@
     
     <!-- Main CSS -->
     <link href="assets/css/berg.css" rel="stylesheet" type="text/css">
+
+    <!-- Page Color CSS -->
     <link href="assets/css/colors/{{ page.color }}.css" rel="stylesheet" type="text/css">
+    
+    <!-- Custom CSS -->
+    <link href="assets/css/custom.css" rel="stylesheet" type="text/css">
+
+    
     
 
     
