--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
     <link href="assets/css/berg.css" rel="stylesheet" type="text/css">
 
     <!-- Page Color CSS -->
-    <link href="assets/css/colors/{{ page.color }}.css" rel="stylesheet" type="text/css">
+    <link href="assets/css/colors/{{ page.page_template_color }}.css" rel="stylesheet" type="text/css">
     
     <!-- Custom CSS -->
     <link href="assets/css/custom.css" rel="stylesheet" type="text/css">
