--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     
     <!-- Site Title -->
-    <title> {{ page.title }}</title>
+    <title> {{ page.full_name }} - Resume</title>
     
     <meta name="description" content="Creative Resume Template">
     <meta name="keywords" content="berg, creative, resume, template">
